Updates new home and about pages yet again: - Fixes CSS layout bug that was only affecting IE7 (but was legitimately a bug in my CSS) - Adds new/different screenshots for about page - Updates 404/500 error pages
git-svn-id: svn+ssh://taylor-hughes.com/svnroot/dnzo/trunk@383 c02d1e6f-6a35-45f2-ab14-3b6f79a691ff

--- a/dnzo/resources/stylesheets/public.css
+++ b/dnzo/resources/stylesheets/public.css
@@ -100,4 +100,24 @@
  }
  #about-page #features {
    width: 470px;
+   margin-top: 0;
+ }
+ 
+ #error-page {
+   background: none;
+ }
+ #error-page #footer {
+   display: none;
+ }
+ #error-block {
+   margin-top: 17px;
+   margin-left: 98px;
+ }
+ #error-block h2 {
+   font: 22px Georgia, serif;
+   margin-bottom: 13px;
+ }
+ #error-block p {
+   font: 13px Helvetica, sans-serif;
+   margin-bottom: 1em;
  }
